--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -41,3 +41,26 @@ html, body, header, ul, li, div, span {
   box-sizing: border-box;
   float: left;
 }
+
+.events {
+  position: relative;
+}
+
+.event {
+  position: absolute;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-left: 5px solid #080;
+  padding: 5px;
+  overflow: hidden;
+}
+
+.item {
+  display: block;
+  color: #080;
+  font-weight: bold;
+}
+
+.location {
+  display: block;
+}
