fixed height problem in firefox

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -35,6 +35,7 @@ html, body, header, ul, li, div, span {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   text-align: right;
+  height: 29.9px;
 }
 
 .events-container {
